# FastAPI_sample

./: README.md  pyproject.toml
app/: main.py  schemas.py
app/routes/: item_routes.py  user_routes.py
tests/: test_main.py
