[tool.poetry]
name = "fast-api-sample"
version = "0.1.0"
description = ""
authors = []

readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "~3.10"
fire = "^0.5.0"
fastapi = "^0.110.2"
mypy = "^1.11.1"
python-dotenv = "^1.0.1"
unicorn = "^2.0.1.post1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
mypy = "^1.11.1"
pytest = "^7.2.0"
google-auth-stubs = "^0.2.0"
google-api-python-client-stubs = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"